# lamprop

./: .gitignore  README.md  README.rst  build.py  console.py  install.py  pyproject.toml
.github/workflows/: ci.yml
examples/: calculate_cte.py  convert_lamprop.py  create_material_db.py  example_py.py  example_yaml.py
lamprop/: console.py  core.py  gui.py  html.py  latex.py  text.py
src/lamprop/: __init__.py  generic.py
src/lamprop/cli/: console.py
src/lamprop/core/: fiber.py  lamina.py  laminate.py  resin.py  utils.py
src/lamprop/io/: parser.py  text.py
test/: CD0200.yaml  UD-HS.yaml  atlac430.yaml  atlac590.yaml  epikote04908.yaml  generic.yaml  hyer.yaml  monoclinic.yaml  qi.yaml  test_core.py  test_core_fiber.py  test_core_lamina.py  test_core_laminate.py  test_core_resin.py  test_examples.py  test_matrix.py  test_output.py  test_parser.py  twill245.yaml  unknown.yaml
tools/: convert-lamprop.py
