[project]
name = "lamprop"
version = "2025.1.31"
description = "Calculate the elastic properties of a fibrous composite laminate."
authors = [
    {name = "R.F. Smith", email = "rsmith@xs4all.nl"}
]
license = {text = "BSD-2-Clause"}
readme = "README.rst"
requires-python = ">=3.8"
dependencies = [
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "numpy>=1.21",
    "pandas>=1.3",
    "rich>=13.0",
    "treeparse>=0.1.0",
    "loguru>=0.7.0",
]

[project.scripts]
lamprop = "lamprop.cli.console:main"

[tool.uv]
# uv configuration

[tool.ruff]
line-length = 88
target-version = "py38"

[tool.ruff.lint]
select = ["E", "F", "W", "C90", "I", "N", "UP", "YTT", "S", "BLE", "FBT", "B", "A", "COM", "C4", "DTZ", "T10", "DJ", "EM", "EXE", "FA", "ISC", "ICN", "G", "INP", "PIE", "T20", "PYI", "PT", "Q", "RSE", "RET", "SLF", "SLOT", "SIM", "TID", "TCH", "INT", "ARG", "PTH", "ERA", "PD", "PGH", "PL", "TRY", "FLY", "NPY", "AIR", "PERF", "FURB", "LOG", "RUF"]
ignore = ["S101", "COM812", "ISC001"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.pytest.ini_options]
testpaths = ["test"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short --cov=lamprop"
pythonpath = ["src"]
